unreal-plugin/ThirdParty/AliceSDF/include/alice_sdf.h

/* ============================================================================
 * Types
 * ============================================================================ */

/**
 * @brief Opaque handle to an SDF node
 *
 * All SDF operations return handles that must be freed with alice_sdf_free().
 */
typedef void* SdfHandle;
/**
 * @brief Result codes for FFI operations
 */
typedef enum {
    SdfResult_Ok = 0,
    SdfResult_InvalidHandle = 1,
    SdfResult_NullPointer = 2,
    SdfResult_InvalidParameter = 3,
    SdfResult_OutOfMemory = 4,
    SdfResult_IoError = 5,
    SdfResult_CompileError = 6,
    SdfResult_Unknown = 99
} SdfResult;
/**
 * @brief Version information
 */
typedef struct {
    uint16_t major;
    uint16_t minor;
    uint16_t patch;
} VersionInfo;
/**
 * @brief Batch evaluation result
 */
typedef struct {
    uint32_t count;
    SdfResult result;
} BatchResult;
/**
 * @brief String result (for shader generation)
 *
 * The data pointer must be freed with alice_sdf_free_string().
 */
typedef struct {
    char* data;       /**< Null-terminated UTF-8 string (or NULL on error) */
    uint32_t len;     /**< Length in bytes (not including null terminator) */
    SdfResult result; /**< Result code */
} StringResult;
/* ============================================================================
 * Library Info
 * ============================================================================ */

/**
 * @brief Get library version
 * @return Version information struct
 */
VersionInfo alice_sdf_version(void);
/**
 * @brief Get version string
 * @return Null-terminated version string (caller must free with alice_sdf_free_string)
 */
char* alice_sdf_version_string(void);
/* ============================================================================
 * Category Counts
 * ============================================================================ */

/** @brief Get number of primitive SDF variants */
uint32_t alice_sdf_primitive_count(void);
/** @brief Get number of operation SDF variants */
uint32_t alice_sdf_operation_count(void);
/** @brief Get number of transform SDF variants */
uint32_t alice_sdf_transform_count(void);
/** @brief Get number of modifier SDF variants */
uint32_t alice_sdf_modifier_count(void);
/** @brief Get total number of all SDF variants */
uint32_t alice_sdf_total_count(void);
/* ============================================================================
 * Primitives
 * ============================================================================ */

/**
 * @brief Create a sphere SDF
 * @param radius Sphere radius
 * @return Handle to the sphere SDF
 */
SdfHandle alice_sdf_sphere(float radius);
/**
 * @brief Create a box SDF
 * @param hx Half-extent in X
 * @param hy Half-extent in Y
 * @param hz Half-extent in Z
 * @return Handle to the box SDF
 */
SdfHandle alice_sdf_box(float hx, float hy, float hz);
/**
 * @brief Create a cylinder SDF
 * @param radius Cylinder radius
 * @param half_height Half-height of the cylinder
 * @return Handle to the cylinder SDF
 */
SdfHandle alice_sdf_cylinder(float radius, float half_height);
/**
 * @brief Create a torus SDF
 * @param major_radius Distance from center to tube center
 * @param minor_radius Tube radius
 * @return Handle to the torus SDF
 */
SdfHandle alice_sdf_torus(float major_radius, float minor_radius);
/**
 * @brief Create a capsule SDF
 * @param ax,ay,az First endpoint
 * @param bx,by,bz Second endpoint
 * @param radius Capsule radius
 * @return Handle to the capsule SDF
 */
SdfHandle alice_sdf_capsule(float ax, float ay, float az,
                            float bx, float by, float bz,
                            float radius);
/**
 * @brief Create a plane SDF
 * @param nx,ny,nz Plane normal (will be normalized)
 * @param distance Distance from origin
 * @return Handle to the plane SDF
 */
SdfHandle alice_sdf_plane(float nx, float ny, float nz, float distance);
SdfHandle alice_sdf_cone(float radius, float half_height);
SdfHandle alice_sdf_ellipsoid(float rx, float ry, float rz);
SdfHandle alice_sdf_rounded_cone(float r1, float r2, float half_height);
SdfHandle alice_sdf_pyramid(float half_height);
SdfHandle alice_sdf_octahedron(float size);
SdfHandle alice_sdf_hex_prism(float hex_radius, float half_height);
SdfHandle alice_sdf_link(float half_length, float r1, float r2);
SdfHandle alice_sdf_rounded_box(float hx, float hy, float hz, float round_radius);
/* Advanced */
SdfHandle alice_sdf_capped_cone(float half_height, float r1, float r2);
SdfHandle alice_sdf_capped_torus(float major_radius, float minor_radius, float cap_angle);
SdfHandle alice_sdf_rounded_cylinder(float radius, float round_radius, float half_height);
SdfHandle alice_sdf_triangular_prism(float width, float half_depth);
SdfHandle alice_sdf_cut_sphere(float radius, float cut_height);
SdfHandle alice_sdf_cut_hollow_sphere(float radius, float cut_height, float thickness);
SdfHandle alice_sdf_death_star(float ra, float rb, float d);
SdfHandle alice_sdf_solid_angle(float angle, float radius);
SdfHandle alice_sdf_heart(float size);
SdfHandle alice_sdf_barrel(float radius, float half_height, float bulge);
SdfHandle alice_sdf_diamond(float radius, float half_height);
SdfHandle alice_sdf_egg(float ra, float rb);
/** @brief Free a string returned by shader generation */
void alice_sdf_free_string(char* str);