unity-sdf-universe/Assets/Scripts/AliceSdf.cs

/**
 * ALICE-SDF C# Bindings for Unity
 *
 * Usage:
 * 1. Copy this file to your Unity project's Assets folder
 * 2. Copy libalice_sdf.dylib (macOS), alice_sdf.dll (Windows), or libalice_sdf.so (Linux)
 *    to Assets/Plugins/
 * 3. Use AliceSdf class to create and evaluate SDFs
 *
 * Example:
 *   var sphere = AliceSdf.Sphere(1.0f);
 *   var box = AliceSdf.Box(0.5f, 0.5f, 0.5f);
 *   var shape = AliceSdf.SmoothUnion(sphere, box, 0.2f);
 *   float distance = AliceSdf.Eval(shape, new Vector3(0.5f, 0, 0));
 *   string glsl = AliceSdf.ToGlsl(shape);
 *   AliceSdf.Free(shape);
 *   AliceSdf.Free(box);
 *   AliceSdf.Free(sphere);
 *
 * Author: Moroya Sakamoto
 */

using System;
using System.Runtime.InteropServices;
using UnityEngine;

namespace AliceSdfUnity
{
    /// <summary>
    /// Result codes from FFI operations
    /// </summary>
    public enum SdfResult : int
    {
        Ok = 0,
        InvalidHandle = 1,
        NullPointer = 2,
        InvalidParameter = 3,
        OutOfMemory = 4,
        IoError = 5,
        Unknown = 99
    }

    /// <summary>
    /// Version information
    /// </summary>
    [StructLayout(LayoutKind.Sequential)]
    public struct VersionInfo
    {
        public ushort Major;
        public ushort Minor;
        public ushort Patch;

        public override string ToString() => $"{Major}.{Minor}.{Patch}";
    }

    /// <summary>
    /// Batch evaluation result
    /// </summary>
    [StructLayout(LayoutKind.Sequential)]
    public struct BatchResult
    {
        public uint Count;
        public SdfResult Result;
    }

    /// <summary>
    /// String result from shader generation
    /// </summary>
    [StructLayout(LayoutKind.Sequential)]
    internal struct StringResult
    {
        public IntPtr Data;
        public uint Len;
        public SdfResult Result;
    }

    /// <summary>
    /// ALICE-SDF Native Library Bindings
    /// </summary>
    public static class AliceSdf
    {
        #if UNITY_IOS && !UNITY_EDITOR
        private const string LibraryName = "__Internal";
        #elif UNITY_ANDROID && !UNITY_EDITOR
        private const string LibraryName = "alice_sdf";
        #elif UNITY_STANDALONE_OSX || UNITY_EDITOR_OSX
        private const string LibraryName = "libalice_sdf";
        #elif UNITY_STANDALONE_WIN || UNITY_EDITOR_WIN
        private const string LibraryName = "alice_sdf";
        #else
        private const string LibraryName = "alice_sdf";
        #endif

        // ============================================================================
        // Library Info
        // ============================================================================

        [DllImport(LibraryName)]
        private static extern VersionInfo alice_sdf_version();

        [DllImport(LibraryName)]
        private static extern IntPtr alice_sdf_version_string();

        /// <summary>
        /// Get library version
        /// </summary>
        public static VersionInfo Version => alice_sdf_version();

        /// <summary>
        /// Get version string
        /// </summary>
        public static string VersionString
        {
            get
            {
                IntPtr ptr = alice_sdf_version_string();
                if (ptr == IntPtr.Zero) return "unknown";
                string result = Marshal.PtrToStringAnsi(ptr);
                alice_sdf_free_string(ptr);
                return result;
            }
        }

        // ============================================================================
        // Category Counts
        // ============================================================================

        [DllImport(LibraryName)]
        private static extern uint alice_sdf_primitive_count();

        [DllImport(LibraryName)]
        private static extern uint alice_sdf_operation_count();

        [DllImport(LibraryName)]
        private static extern uint alice_sdf_transform_count();

        [DllImport(LibraryName)]
        private static extern uint alice_sdf_modifier_count();

        [DllImport(LibraryName)]
        private static extern uint alice_sdf_total_count();

        /// <summary>Number of primitive SDF variants</summary>
        public static uint PrimitiveCount => alice_sdf_primitive_count();
        /// <summary>Number of operation SDF variants</summary>
        public static uint OperationCount => alice_sdf_operation_count();
        /// <summary>Number of transform SDF variants</summary>
        public static uint TransformCount => alice_sdf_transform_count();
        /// <summary>Number of modifier SDF variants</summary>
        public static uint ModifierCount => alice_sdf_modifier_count();
        /// <summary>Total number of all SDF variants</summary>
        public static uint TotalCount => alice_sdf_total_count();

        // ============================================================================
        // Primitives
        // ============================================================================

        [DllImport(LibraryName)]
        private static extern IntPtr alice_sdf_sphere(float radius);

        [DllImport(LibraryName)]
        private static extern IntPtr alice_sdf_box(float hx, float hy, float hz);

        [DllImport(LibraryName)]
        private static extern IntPtr alice_sdf_cylinder(float radius, float half_height);

        [DllImport(LibraryName)]
        private static extern IntPtr alice_sdf_torus(float major_radius, float minor_radius);

        [DllImport(LibraryName)]
        private static extern IntPtr alice_sdf_capsule(float ax, float ay, float az,
                                                        float bx, float by, float bz,
                                                        float radius);

        [DllImport(LibraryName)]
        private static extern IntPtr alice_sdf_plane(float nx, float ny, float nz, float distance);

        /// <summary>Create a sphere SDF</summary>
        public static IntPtr Sphere(float radius) => alice_sdf_sphere(radius);

        /// <summary>Create a box SDF</summary>
        public static IntPtr Box(float hx, float hy, float hz) => alice_sdf_box(hx, hy, hz);

        /// <summary>Create a box SDF</summary>
        public static IntPtr Box(Vector3 halfExtents) => alice_sdf_box(halfExtents.x, halfExtents.y, halfExtents.z);

        /// <summary>Create a cylinder SDF</summary>
        public static IntPtr Cylinder(float radius, float halfHeight) => alice_sdf_cylinder(radius, halfHeight);

        /// <summary>Create a torus SDF</summary>
        public static IntPtr Torus(float majorRadius, float minorRadius) => alice_sdf_torus(majorRadius, minorRadius);

        /// <summary>Create a capsule SDF</summary>
        public static IntPtr Capsule(Vector3 a, Vector3 b, float radius) =>
            alice_sdf_capsule(a.x, a.y, a.z, b.x, b.y, b.z, radius);

        /// <summary>Create a plane SDF</summary>
        public static IntPtr Plane(Vector3 normal, float distance) =>
            alice_sdf_plane(normal.x, normal.y, normal.z, distance);

        // --- Basic (continued) ---

        [DllImport(LibraryName)] private static extern IntPtr alice_sdf_cone(float radius, float half_height);
        [DllImport(LibraryName)] private static extern IntPtr alice_sdf_ellipsoid(float rx, float ry, float rz);
        [DllImport(LibraryName)] private static extern IntPtr alice_sdf_rounded_cone(float r1, float r2, float half_height);
        [DllImport(LibraryName)] private static extern IntPtr alice_sdf_pyramid(float half_height);
        [DllImport(LibraryName)] private static extern IntPtr alice_sdf_octahedron(float size);
        [DllImport(LibraryName)] private static extern IntPtr alice_sdf_hex_prism(float hex_radius, float half_height);
        [DllImport(LibraryName)] private static extern IntPtr alice_sdf_link(float half_length, float r1, float r2);
        [DllImport(LibraryName)] private static extern IntPtr alice_sdf_rounded_box(float hx, float hy, float hz, float round_radius);

        public static IntPtr Cone(float radius, float halfHeight) => alice_sdf_cone(radius, halfHeight);
        public static IntPtr Ellipsoid(Vector3 radii) => alice_sdf_ellipsoid(radii.x, radii.y, radii.z);
        public static IntPtr RoundedCone(float r1, float r2, float halfHeight) => alice_sdf_rounded_cone(r1, r2, halfHeight);
        public static IntPtr Pyramid(float halfHeight) => alice_sdf_pyramid(halfHeight);
        public static IntPtr Octahedron(float size) => alice_sdf_octahedron(size);
        public static IntPtr HexPrism(float hexRadius, float halfHeight) => alice_sdf_hex_prism(hexRadius, halfHeight);
        public static IntPtr Link(float halfLength, float r1, float r2) => alice_sdf_link(halfLength, r1, r2);
        public static IntPtr RoundedBox(Vector3 halfExtents, float roundRadius) => alice_sdf_rounded_box(halfExtents.x, halfExtents.y, halfExtents.z, roundRadius);

        // --- Advanced ---

        [DllImport(LibraryName)] private static extern IntPtr alice_sdf_capped_cone(float half_height, float r1, float r2);
        [DllImport(LibraryName)] private static extern IntPtr alice_sdf_capped_torus(float major_radius, float minor_radius, float cap_angle);
        [DllImport(LibraryName)] private static extern IntPtr alice_sdf_rounded_cylinder(float radius, float round_radius, float half_height);
        [DllImport(LibraryName)] private static extern IntPtr alice_sdf_triangular_prism(float width, float half_depth);
        [DllImport(LibraryName)] private static extern IntPtr alice_sdf_cut_sphere(float radius, float cut_height);
        [DllImport(LibraryName)] private static extern IntPtr alice_sdf_cut_hollow_sphere(float radius, float cut_height, float thickness);
        [DllImport(LibraryName)] private static extern IntPtr alice_sdf_death_star(float ra, float rb, float d);
        [DllImport(LibraryName)] private static extern IntPtr alice_sdf_solid_angle(float angle, float radius);
        [DllImport(LibraryName)] private static extern IntPtr alice_sdf_heart(float size);
        [DllImport(LibraryName)] private static extern IntPtr alice_sdf_barrel(float radius, float half_height, float bulge);
        [DllImport(LibraryName)] private static extern IntPtr alice_sdf_diamond(float radius, float half_height);
        [DllImport(LibraryName)] private static extern IntPtr alice_sdf_egg(float ra, float rb);

        public static IntPtr CappedCone(float halfHeight, float r1, float r2) => alice_sdf_capped_cone(halfHeight, r1, r2);
        public static IntPtr CappedTorus(float majorRadius, float minorRadius, float capAngle) => alice_sdf_capped_torus(majorRadius, minorRadius, capAngle);
        public static IntPtr RoundedCylinder(float radius, float roundRadius, float halfHeight) => alice_sdf_rounded_cylinder(radius, roundRadius, halfHeight);
        public static IntPtr TriangularPrism(float width, float halfDepth) => alice_sdf_triangular_prism(width, halfDepth);
        public static IntPtr CutSphere(float radius, float cutHeight) => alice_sdf_cut_sphere(radius, cutHeight);
        public static IntPtr CutHollowSphere(float radius, float cutHeight, float thickness) => alice_sdf_cut_hollow_sphere(radius, cutHeight, thickness);
        public static IntPtr DeathStar(float ra, float rb, float d) => alice_sdf_death_star(ra, rb, d);
        public static IntPtr SolidAngle(float angle, float radius) => alice_sdf_solid_angle(angle, radius);
        public static IntPtr Heart(float size) => alice_sdf_heart(size);
        public static IntPtr Barrel(float radius, float halfHeight, float bulge) => alice_sdf_barrel(radius, halfHeight, bulge);
        public static IntPtr Diamond(float radius, float halfHeight) => alice_sdf_diamond(radius, halfHeight);
        public static IntPtr Egg(float ra, float rb) => alice_sdf_egg(ra, rb);

        // --- 2D/Extruded ---
